--- a/html/activations.html
+++ b/html/activations.html
@@ -3,7 +3,7 @@
 <table cellpadding="0" cellspacing="0" border="0" class="license_activations">
   <thead>
     <tr>
-      <th>Product ID</th>
+      <th>Product</th>
       <th>Website</th>
       <th>Activation Date</th>
     </tr>
