--- a/html/template.html
+++ b/html/template.html
@@ -29,6 +29,13 @@
     width: 33%;
     text-align: left;
   }
+  table {
+    width: 100%;
+  }
+  table td {
+    padding: 5px 0;
+    border-bottom: 1px solid #D3D3D3;
+  }
   </style>
 </head>
 <body>
